# lib/hangman_web/controllers/user_controller.ex
@@ -287,13 +287,14 @@ defmodule HangmanWeb.UserController do
   end
 
   swagger_path :get_users do
-    get("/manager/users/{np}/{nr}")
+    get("/manager/users/{np}/{nr}?char={char}")
     summary("All Users")
     description("Return JSON with all users listed in the database")
     parameters do
       authorization :header, :string, "Token to access", required: true
       np :path, :string, "The current page", required: true
       nr :path, :string, "The rows per page", required: true
+      char :path, :string, "The user you want to find", required: false
     end
     produces("application/json")
     deprecated(false)
